2004-01-24  Olivier Samyn  <osamyn@ulb.ac.be>

	* src/boards/py-mod-gcompris.c: (py_gcompris_bar_set_repeat_icon),
	(py_gcompris_bar_hide), (py_gcompris_board_has_help),
	(py_gcompris_help_start), (py_gcompris_log_set_comment): fixed compilation warning and some errors 
	* src/boards/py-mod-skin.c: (py_gcompris_skin_get_font): fixed compilation warning and some errors
	* src/boards/py-mod-utils.c: (py_gcompris_item_event_focus): fixed compilation warning and some errors
	* src/boards/python.c: (pythonboard_init), (pythonboard_start),
	(pythonboard_pause), (pythonboard_end), (pythonboard_is_our_board),
	(pythonboard_key_press), (pythonboard_ok), (pythonboard_set_level),
	(pythonboard_config), (pythonboard_repeat): fixed bug when pressing a key in a python board, fixed compilation warning and some errors
	* src/gcompris/gcompris.h: corrected function name (gcompris_log_set_comment)

2004-01-24  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/target.c: (start_board), (target_next_level),
	(process_ok), (request_score): fixed bug where ok was accepted before dart were send.
	now the ok button is contextual.
	* src/gcompris/log.c: (gcompris_log_end): added program name in the log format. Now use starttime.

2004-01-21  Olivier Samyn  <osamyn@easynet.be>

	* docs/C/python.html: synced docs with code
	* docs/C/python.xml: synced docs with code
	* src/boards/py-mod-gcompris.c: (py_gcompris_bar_set_repeat_icon),
	(py_gcompris_get_user_default_locale),
	(py_gcompris_log_set_reason), (py_gcompris_log_end): wrapped some
new functions
	* src/boards/py-mod-utils.c: (py_gcompris_item_rotate_relative),
	(py_gcompris_item_rotate_relative_with_center),
	(py_gcompris_load_pixmap_asset), (py_gcompris_get_asset_file):
wrapped some new functions

2004-01-20  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/Makefile.in.in: no idea why it as changed
	* src/boards/reading.c: (player_win), (player_loose): added call to log for failed comment
	* src/gcompris/Makefile.am: added log.c