@@ -7,8 +7,9 @@
 	 difficulty="2"
 	 icon="boardicons/melody.png"
 	 author="Jose JORGE (jjorge@free.fr)"
+	 mandatory_sound_file="melody/son1.ogg"
 	 boarddir="melody">
-	 <title>Melody</title>
+	 <_title>Melody</_title>
 	 <_description>Repeat a melody</_description>
 	<_prerequisite></_prerequisite>
 	<_goal>Ear training activity</_goal>
